/*
 * $Id: ChangeLog,v 1.4035 2005/04/14 17:30:16 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-04-14 17:17 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/ct/screen3.prg
    + Added SaveCursor() and RestCursor()
      /* Please review, based only on documentation - I never used these functions. */

  * utils/xbscript/xbs_harb.ch
    * Synched with changes in genc.c

2005-04-14 19:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * in indexing set starting record if not given by user to current
      record

2005-04-14 07:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * hrbdll.vc
    * fixed CLEAN option.
    * (I can't check other makefiles at the moment)

2005-04-14 14:45 UTC+0300 Mindaugas Kavaliauskas <dbtopas at @ at dbtopas.lt>
  * xharbour/contrib/rdd_ads/adsfunc.c
    + Added AdsDirectory(), AdsCheckExistence() and AdsDeleteFile(). Usefull
      for managing server side temporary files. Connection should be
      established to use these functions.

2005-04-14 02:14 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbapi.h
  * source/vm/garbage.c
    + Added: BOOL hb_gcSetCollecting( BOOL bCollecting ) to set and retrieve prvious status.

  * source/vm/classes.c
    + Added logic to DISABLE the GC before performing a Class Destructor.

   /*
      This fixes a GPF trap if the destructor has a WAIT STATE which then calls GC.
    */

2005-04-13 22:57 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rdd/dbcmd.c
  * source/rtl/dbdelim.prg
    * Reverted to use prg code for __dbDelim
    + Added prg level AppendToDb()

  * hrbdll.bc
  * hrbdll.vc
  * makefile.bc
  * makefile.nt
  * makefile.vc
    * Added source/rtl/dbdelim.prg

  /* NOTE: Other make files should be updated. */
