@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4035 2005/04/14 17:30:16 druzus Exp $
+ * $Id: ChangeLog,v 1.4036 2005/04/15 00:18:10 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-04-14 18:20 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * source/vm/arrayshb.c
+    + Added support for optional 4th argument <lDoubleQuoteOnly> to HB_aTokens()
+  * source/rtl/dbdelim.prg
+    * Corrected call to HB_aTokens() to pass 4th argument as .T. so only "" are processed as strings.
 
 2005-04-14 17:17 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
   * source/ct/screen3.prg
